# hexes-and-hexes

./: .gitignore  .gitmodules  README.md
code/: .gitignore  CMakeLists.txt
code/assets/json/: PersistentData.json  minogram_6x10.json
code/assets/json/animations/: CharacterAnimations.json  ParticleEffects.json
code/assets/json/atlas-textures/: CharacterAtlas.json
code/assets/json/terrain-sets/: DirtPitTerrainSet.json  GrassTerrainSet.json
code/assets/shaders/: fullscreen.frag  fullscreen.vert  sprite.frag  sprite.vert  text.frag  text.vert  uiBox.frag  uiBox.vert
code/docs/: DoxyfileConfig  QuickStart.md
code/docs/wiki/: Engine.md  Game.md  Json.md
code/engine/: CMakeLists.txt
code/engine/include/engine/: Assets.h
code/engine/include/engine/core/: AudioManager.h  Context.h  Engine.h  Events.h  InputHandler.h  ObjectManager.h
code/engine/include/engine/game/: Game.h
code/engine/include/engine/rendering/: AnimatedSprite.h  AtlasTexture.h  GameObject.h  Mesh.h  Shader.h  Sprite.h  Texture.h
code/engine/include/engine/resource_loading/: ResourceManager.h
code/engine/include/engine/tilemap/: AutoTileTerrain.h  HexCoords.h  HexGrid.h  HexTile.h
code/engine/include/engine/ui/: UIBox.h  UIButton.h  UIObject.h  UITexture.h
code/engine/include/engine/ui/text/: BitmapFont.h  UIText.h
code/engine/include/engine/utility/: Utility.h
code/engine/src/core/: AudioManager.cpp  Context.cpp  Engine.cpp  InputHandler.cpp  ObjectManager.cpp
code/engine/src/game/: Game.cpp
code/engine/src/rendering/: AnimatedSprite.cpp  AtlasTexture.cpp  Mesh.cpp  Shader.cpp  Sprite.cpp  Texture.cpp
code/engine/src/resource_loading/: ResourceManager.cpp  stb_image.cpp
code/engine/src/tilemap/: AutoTileTerrain.cpp  HexCoords.cpp  HexGrid.cpp  HexTile.cpp
code/engine/src/ui/: UIBox.cpp  UIButton.cpp  UIObject.cpp  UITexture.cpp
code/engine/src/ui/text/: BitmapFont.cpp  UIText.cpp
code/engine/src/utility/: Utility.cpp
code/game/: CMakeLists.txt
code/game/src/: Game.cpp  Game.h  main.cpp
code/game/src/expanded-hex-grid/characters/: Character.cpp  Character.h  PlayerCharacter.cpp  PlayerCharacter.h
code/game/src/expanded-hex-grid/characters/actions/: Action.cpp  Action.h  Explode.cpp  Explode.h  Lifesteal.cpp  Lifesteal.h  LineAttack.cpp  LineAttack.h  MoveAction.cpp  MoveAction.h  PlayerAoE.cpp  PlayerAoE.h  PlayerSmallAoE.cpp  PlayerSmallAoE.h  SingleAttack.cpp  SingleAttack.h  Tier2EnemyAttack.cpp  Tier2EnemyAttack.h  Tier3EnemyAoE.cpp  Tier3EnemyAoE.h  Tier3EnemySingle.cpp  Tier3EnemySingle.h  WallAction.cpp  WallAction.h
code/game/src/expanded-hex-grid/characters/enemies/: BasicEnemy.cpp  BasicEnemy.h  ExplodingEnemy.cpp  ExplodingEnemy.h  Tier2Enemy.cpp  Tier2Enemy.h  Tier3Enemy.cpp  Tier3Enemy.h
code/game/src/expanded-hex-grid/hex-tile/: CustomHexTile.cpp  CustomHexTile.h  Obstacle.cpp  Obstacle.h
code/game/src/ui/game-ui/: ActionList.cpp  ActionList.h  ActionListItem.cpp  ActionListItem.h  CompleteUI.cpp  CompleteUI.h  GameOverMenu.cpp  GameOverMenu.h  MainMenu.cpp  MainMenu.h  PauseButton.cpp  PauseButton.h  PauseMenu.cpp  PauseMenu.h  PlayerHealthVisualization.cpp  PlayerHealthVisualization.h  QueueVisualization.cpp  QueueVisualization.h  QueueVisualizationItem.cpp  QueueVisualizationItem.h
